--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -21,6 +21,8 @@
 
 .rightside {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px; 
     align-items: center; 
     justify-content: center;
     margin-right: 2%;
