--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,16 @@ html {
     font-size: 1.5rem;
     background: radial-gradient(#e8e6e4 1px, #f8f7f5 1px);
     background-size: 20px 20px;
+
 }
 
 body {
     margin: 0;
+}
+
+
+@media (min-width: 768px) {
+    html {
+        overflow: hidden;
+    }
 }
