--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -63,6 +63,47 @@
   animation: slideInLeftPortrait 1s ease-out;
 }
 
+.color-transition {
+    animation: colorChange 5s infinite;
+    font-weight: bold;
+}
+
+@keyframes colorChange {
+    0% {
+      color: #ff7f50; /* Coral */
+    }
+    25% {
+      color: #ffa500; /* Orange */
+    }
+    50% {
+      color: #1e90ff; /* DodgerBlue */
+    }
+    75% {
+      color: #00bfff; /* DeepSkyBlue */
+    }
+    100% {
+      color: #ff7f50; /* Coral */
+    }
+}
+
+.color-transition:nth-child(2) {
+    animation-delay: 1s;
+}
+
+.color-transition:nth-child(3) {
+    animation-delay: 2s;
+}
+
+.color-transition:nth-child(4) {
+    animation-delay: 3s;
+}
+
+.color-transition:nth-child(5) {
+    animation-delay: 4s;
+}
+
+
+
 /* Media query for smaller screens */
 @media (max-width: 768px) {
     .homecontent {
@@ -117,6 +158,24 @@
     to {
         transform: translateX(0);
         opacity: 1;
+    }
+}
+
+@keyframes colorChange {
+    0% {
+      color: #ff7f50; /* Coral */
+    }
+    25% {
+      color: #ffa500; /* Orange */
+    }
+    50% {
+      color: #1e90ff; /* DodgerBlue */
+    }
+    75% {
+      color: #00bfff; /* DeepSkyBlue */
+    }
+    100% {
+      color: #ff7f50; /* Coral */
     }
 }
   
