--- a/src/app/experiences/experiences.component.scss
+++ b/src/app/experiences/experiences.component.scss
@@ -1,7 +1,125 @@
 .container {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     flex-wrap: wrap;
     flex: 1;
-    min-height: 100vh;
-    padding-right: 220px;
+    min-height: 100vh;;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
+
+h2 {
+    color: #DD761C
+}
+
+h2::after{
+    content: '';
+    display: grid;
+    width: 353;;
+    align-items: center;
+    height: 3px;
+    background-color: #DD761C;
+    margin: 10px 0;
+}
+
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    height: 100%;
+    background-image: linear-gradient(to bottom, #DD761C, #ffc400);
+    top: 0;
+    left: 50%;
+    margin-left: -3px;
+    z-index: -1;
+    animation: moveline 6s linear forwards;
+  }
+
+.timeline-container {
+    padding: 10px 50px;
+    position: relative;
+    width: 50%;
+    animation: movedown 1s linear forwards;
+    opacity: 0;
+}
+
+.text-box {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.timeline-container:nth-child(odd){
+    left: -100px;
+}
+
+.timeline-container:nth-child(even){
+    left:50%;
+    img {
+        left: -30px;
+    }
+}
+
+.timeline-container img {
+    position: absolute;
+    width: 60px;
+    right: -30px;
+    top: 32px;
+    z-index: 10;
+}
+
+.text-box h3{
+    font-weight: 600;
+}
+
+.text-box small{
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+@keyframes moveline {
+    0% {
+      height: 0;
+    }
+    100% {
+      height: 100%;
+    }
+}
+
+@keyframes movedown {
+    0% {
+      opacity: 1;
+      transform: translateY(-30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }   
+}
+
+.timeline-container:nth-child(1){
+    animation-delay: 0s;
+}
+
+.timeline-container:nth-child(2){
+    animation-delay: 2s;
+}
+
+.timeline-container:nth-child(3){
+    animation-delay: 4s;
+}
+
+
