--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,6 +4,7 @@ footer {
     text-align: center;
     margin-top: auto;
     box-shadow: 0 -1px 5px rgba(0,0,0,0.5);
+    z-index: 1000;
 
   
     .footer-contact,
