--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -14,11 +14,13 @@ footer {
   
     .footer-contact h3 {
       margin-bottom: 5px;
+      font-size: 24px;
     }
   
     .footer-contact p,
     .footer-rights p {
       margin: 10px;
+      font-size: 16px;
     }
   
     a {
