--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -115,6 +115,7 @@
     }   
     .leftside, .rightside {
         width: 100%; /* Make both sections take full width */
+        font-size: 16px;
         }   
     .rightside {
         text-align: center; /* Center the text for better readability */
