--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -5,6 +5,7 @@ footer {
     margin-top: auto;
     box-shadow: 0 -1px 5px rgba(0,0,0,0.5);
     z-index: 1000;
+    bottom: 0;
 
   
     .footer-contact,
