--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -1,5 +1,5 @@
 .homecontainer {
-    min-height: 100vh;
+    height: 100%;
     margin: 80px 20px 20px 20px;
     display: flex;
     justify-content: space-between;
