--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -106,3 +106,13 @@
     border-radius: 15px;
 }
 
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+a:hover {
+    color: #6dc5d1;
+    text-decoration: underline;
+
+}
