--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -60,6 +60,11 @@ h2::after{
     position: relative;
     border-radius: 6px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    font-family: "Cabin", sans-serif;
+
+    small {
+        font-style: italic;
+    }
 }
 
 @property --angle{
@@ -110,11 +115,16 @@ h2::after{
 
 .text-box h3{
     font-weight: 600;
+    font-family: "Cabin", sans-serif;
 }
 
 .text-box small{
     display: inline-block;
     margin-bottom: 15px;
+}
+
+h2, p {
+    font-family: "Cabin", sans-serif;
 }
 
 @keyframes moveline {
