--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -16,12 +16,14 @@ footer {
     .footer-contact h3 {
       margin-bottom: 5px;
       font-size: 24px;
+      font-family: "Cabin", sans-serif;
     }
   
     .footer-contact p,
     .footer-rights p {
       margin: 10px;
       font-size: 16px;
+      font-family: "Cabin", sans-serif;
     }
   
     a {
