--- a/src/app/hobbies/hobbies.component.scss
+++ b/src/app/hobbies/hobbies.component.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     color: rgba(0,0,0,.87);
+    font-family: "Cabin", sans-serif;
+
+    button{
+    font-family: "Cabin", sans-serif;;
+    }
 }
 
 .hobby {
@@ -12,43 +17,84 @@
 
 }
 
-.hobby-color1, .hobby-color2{
+.hobby-color1, .hobby-color2, .hobby-color3, .hobby-color4, .hobby-color5, .hobby-color6, .hobby-color7, .hobby-color8{
     width: 50%;
     min-height: 25vh;
     height: 100%;
     height: auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
 
-.hobby-color1 p, .hobby-color2 p{ 
-    padding: 4%;}
+    h2 {
+        font-size: 35px;
+        margin-bottom: -20px;
+    }
 
-.hobby-color1 a, .hobby-color2 a{ 
-    text-decoration: underline;
-    color: #405b6a;}
+    p {
+        padding:4%;
+        font-size: 25px;
+    }
 
-.hobby-color1 button, .hobby-color2 button{ 
-    padding: 3%; 
-    border-radius: 10px;
-    font-size: large;}
+    a {
+        text-decoration: underline;
+        color: #405b6a;
+    }
 
-.hobby-color1 button:hover, .hobby-color2 button:hover{
-    background-color: #6dc5d1;
-    color: white;
-    cursor: pointer;
-}
-.hobby-color1 img, .hobby-color2 img {
-    width: 50%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-}
+    button {
+        padding: 3%; 
+        margin: 3%;
+        border-radius: 10px;
+        font-size: large;
+    }
 
+    button:hover {
+        background-color: #6dc5d1;
+        color: white;
+        cursor: pointer;       
+    }
+
+    img {
+        width: 50%;
+        height: auto;
+        border-radius: 10px;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        margin: 1%;
+    }
+
+ }
 
 .hobby-color2{
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+.hobby-color2, .hobby-color3, .hobby-color6, .hobby-color7{
     background-color: #FDE49E;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+@media (max-width: 768px) {
+    .hobby-color1, .hobby-color2, .hobby-color3, .hobby-color4, .hobby-color5, .hobby-color6, .hobby-color7, .hobby-color8{
+        width: 100%;
+    }
+    .hobby-color1 img, .hobby-color2 img {
+        width: 80%;
+    }
+    .hobby {
+        flex-direction: column;
+    }
+
+    .hobby-color1, .hobby-color3, .hobby-color5, .hobby-color7{
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .hobby-color2, .hobby-color4, .hobby-color6, .hobby-color8{
+        background-color: #FDE49E;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    }
 }
