--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -53,13 +53,15 @@
 }
 
 .card h2{
+    font-family: "Cabin", sans-serif;
     font-size: 35px;
 }
 
 .card h3{
+    font-family: "Cabin", sans-serif;
     text-transform: uppercase;
     font-size: 25px;
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .right-side{
@@ -74,9 +76,12 @@
 
 .right-side p{
     text-align: center;
+    font-family: "Cabin", sans-serif;
 }
 
 .right-side h1{
+    font-family: "Cabin", sans-serif;
+    font-style: italic;
     font-size: 50px;
     margin-bottom: 10px;
 }
