--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -45,6 +45,8 @@
     transition: all 0.3s ease;
     position: relative;
     margin: 0 15px;
+    font-family: "Cabin", sans-serif;
+    text-transform: uppercase;
 }
 
 
