--- a/src/app/startpage/startpage.component.scss
+++ b/src/app/startpage/startpage.component.scss
@@ -1,155 +1,193 @@
-.introduction {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; /* Centering content */
-    margin-top: 10%;
-    padding: 0 5%;
-    color: #405b6a;
-    
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: "Cabin", sans-serif;
 }
 
-.myName {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-    background-color: #6dc5d1;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    /*border-color: black;
-    border-width: 1px;
-    border-style: solid;*/
-    animation: slideInLeft 1s ease-out;
+main{
+  position: relative;
+  background-color: aqua;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
-.iAm {
-    display: flex;
-    justify-content: center;
-    padding: 2%;
-    margin-top: 2%;
-    background-color: #fde49e;
-    border-radius: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    /*border-color: black;
-    border-width: 1px;
-    border-style: solid;*/
-    animation: slideInRight 1s ease-out;
+
+
+.rotatingText.fade {
+  opacity: 0;
+}
+
+.parallax {
+  pointer-events: none;
+  transition: 0.45s cubic-bezier(.2,.49,.32,.99);
+}
+
+.bg-img{
+  position: absolute;
+  width: 120%; 
+  top: -5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.clouds1{
+  position: absolute;
+  width: 120%; 
+  top: 22%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+.clouds2{
+  position: absolute;
+  width: 120%; 
+  top: -9%;
+  left: 48%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+}
+
+.mountains{
+  position: absolute;
+  width: 120%; 
+  top: 56%;
+  left: 46%;
+  transform: translate(-50%, -50%);
+  z-index: 4;
+}
+
+.fog{
+  position: absolute;
+  width: 120%; 
+  top: 96%;
+  left: 51%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
+.tree1{
+  position: absolute;
+  width: 120%; 
+  top: -10%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+  z-index: 6;
+}
+
+.tree3{
+  position: absolute;
+  width: 120%; 
+  top: 8%;
+  left: 47%;
+  transform: translate(-50%, -50% );
+  z-index: 7;
+}
+
+.text{
+  position: absolute;
+  width: 100%;
+  top: 46%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-transform: uppercase;
+  color: #6dc5d1; 
+  z-index: 3;
+  pointer-events: auto;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.acknowledgement{
+  position: absolute;
+  width: 100%;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color:white; 
+  z-index: 10;
+  pointer-events: auto;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .rotatingText {
-    font-weight: bold;
-    color: #405b6a; 
-    margin-left: 5px;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-  }
-
-.rotatingText.fade {
-    opacity: 0;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  font-style: italic;
+  color: #FDE49E;
 }
 
-.learnMore {
-    margin-top: 2%;
-    animation: appear 3s ease-in;
+
+::selection{
+  background-color: #fde49e6d;
 }
 
-.buttonLearnMore {
-  background: transparent;
-  margin-top: 2%;
-  border: none;
-  position: relative;
-  color: #f0f0f0;
-  cursor: pointer;
-  z-index: 1;
-  padding: 10px 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  animation: appear 2s ease-in
+.text h2{
+  font-weight: 100;
+  font-size: 3rem;
+  left: 20%;
+  line-height: 0.88;
 }
 
-.buttonLearnMore::after,
-.buttonLearnMore::before {
-  content: '';
+.text h1{
+  font-weight: 800;
+  font-size: 4rem;
+  line-height: 0.88;
+}
+
+.learmore{
   position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -99999;
-  transition: all .4s;
-}
+  padding: 20px;
+  top: 62%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-transform: uppercase;
+  text-align: center;
+  color:white; 
 
-.buttonLearnMore::before {
-  transform: translate(0%, 0%);
-  width: 100%;
-  height: 100%;
-  background: #405b6a;
   border-radius: 10px;
+  z-index: 11;
+  cursor: pointer;
 }
-
-.buttonLearnMore::after {
-  transform: translate(10px, 10px);
-  width: 35px;
-  height: 35px;
-  background: #ffffff15;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-radius: 50px;
-}
-
-.buttonLearnMore:hover::before {
-  transform: translate(5%, 20%);
-  width: 110%;
-  height: 110%;
-}
-
-.buttonLearnMore:hover::after {
+.learnmore{
+  position:absolute;
+  padding: 20px;
+  top: 68%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 11;
+  background-color: rgba(0,0,0,0);
+  cursor: pointer;
   border-radius: 10px;
-  transform: translate(0, 0);
-  width: 100%;
-  height: 100%;
+  border: #FDE49E 2px solid;
+  box-shadow: 0 0 50px 5px #FDE49E;
+  color: #FDE49E;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 200;
+}
+.learnmore:hover{
+  background-color: #FDE49E;
+  color: #000;
 }
 
-.buttonLearnMore:active::after {
-  transition: 0s;
-  transform: translate(0, 5%);
+@media (max-width: 1528px) {
+  .text h2{
+    font-size: 2.5rem;
+  }
+  .text h1{
+    font-size: 3.5rem;
+  }
 }
 
 
 
-/* Keyframes für den Slide-Effekt */
-@keyframes slideInLeft { 
-    from { 
-        transform: translateX(-50%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
 
-@keyframes slideInRight { 
-    from { 
-        transform: translateX(50%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
 
-@keyframes appear {
-    from {transform: translateX(0);
-        opacity: 0;
-    }
-    to {transform: translateX(0);
-        opacity: 1;};
-    
-}
 
