--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -8,7 +8,7 @@
 .left-side{
     background-color: #FDE49E;
     border-radius: 6px;
-    height: 100vh;
+    height: 87vh;
     width: 50%;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     display: flex;
@@ -20,18 +20,73 @@
     height: 70%;
     width: 60%;
     border-radius: 6px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: #fff6dd
+    background-color: rgba(0,0,0,0);
+    transition: transform 0.3s ease-in-out;
+    perspective: 1000px;
 }
 
 .card:hover{
     transform: scale(1.05);
-    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+
+}
+
+.card-inner.flipped {
+    transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; /* Hide back side when facing away */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+  
+.card-front {
+    background-color: #fff6dd;
+}
+  
+.card-back {
+    align-items: center;
+    background-color: #fff6dd;
+    transform: rotateY(180deg); 
+}
+.card-back ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    width: 100%;
+}
+
+.card-back li {
+    font-size: 18px;
+    line-height: 1.6;
+    padding: 8px 0; 
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
+}
+
+.bold{
+    font-weight: bold;
 }
 
 .card .card-picture{
@@ -110,6 +165,10 @@
         height: 50vh;
     }
 
+    .left-side{
+        margin-top: 50px;
+    }
+
     .right-side{
         padding-left: 0;
 
@@ -131,14 +190,19 @@
         font-size: 20px;
     }
 
-    .card .card-picture{
-        width: 100px;
-        height: 100px;
+    .card .card-picture {
+        width: 120px;
+        height: 120px; 
+        overflow: hidden;
+        border-radius: 50%;
+        margin-bottom: 15px;
     }
 
-    .card .card-picture img{
-        width: 100px;
-        height: 100px;
+    .card .card-picture img {
+        width: 100%; 
+        height: 100%; 
+        object-fit: cover; 
+        border-radius: 50%; 
     }
 }
 
