--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -3,7 +3,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: #6dc5d1;
+    background-image: linear-gradient(to right, #6dc5d1, #3db2c2); 
     width: 100%; 
     height: 60px;
     display: flex;
