--- a/src/app/hobbies/hobbies.component.scss
+++ b/src/app/hobbies/hobbies.component.scss
@@ -47,13 +47,19 @@
         padding: 3%; 
         margin: 3%;
         border-radius: 10px;
+        border: #40767e 3px solid;
         font-size: large;
+        text-transform: uppercase; 
+        transition: transform 0.3s ease-in-out;  
     }
 
     button:hover {
         background-color: #6dc5d1;
         color: white;
-        cursor: pointer;       
+        cursor: pointer;
+        transform: scale(1.05);
+        border: #5fb0bd 4px solid;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
     }
 
     img {
@@ -76,6 +82,103 @@
     background-color: #FDE49E;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+.guess-container {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.guess-input {
+    width: 75%;
+    height: 30%;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 16px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease;
+    font-family: "Cabin", sans-serif;
+}
+.guess-input:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.submit-button{
+    height: 65%;
+    width: auto;
+}
+
+.guess-container {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.result-correct, .result-wrong {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+  
+  
+  .result-correct {
+    color: #28a745;
+    text-shadow: 0 0 10px #28a745, 0 0 20px #28a745, 0 0 30px #28a745;
+    animation: correctPulse 0.8s ease-out, fadeIn 1.5s ease-in-out;
+    opacity: 1;
+  }
+  
+  .result-wrong {
+    color: #dc3545; 
+    text-shadow: 0 0 10px #dc3545, 0 0 20px #dc3545, 0 0 30px #dc3545;
+    animation: wrongShake 0.6s ease-out, fadeIn 1.5s ease-in-out;
+    opacity: 1;
+  }
+  
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes correctPulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  @keyframes wrongShake {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    25% {
+      transform: translateX(-5px);
+    }
+    50% {
+      transform: translateX(5px);
+    }
+    75% {
+      transform: translateX(-5px);
+    }
+  }
+  
+
+
 
 @media (max-width: 768px) {
     .hobby-color1, .hobby-color2, .hobby-color3, .hobby-color4, .hobby-color5, .hobby-color6, .hobby-color7, .hobby-color8{
