--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -185,8 +185,8 @@ h2, p {
     .timeline-container {
         width: 80%;
         padding: 10px 20px;
-        margin-bottom: 30px; /* Add space between timeline entries */
-        left: 0; /* Align to the left */
+        margin-bottom: 30px; 
+        left: 0; 
         position: relative;
         font-size: 16px;
     }
