--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -53,7 +53,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden; /* Hide back side when facing away */
+    backface-visibility: hidden; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -190,8 +190,9 @@
         width: 80%;
     }
 
-    .card h2{
+    .right-side h2{
         font-size: 25px;
+        transform: translateX(0px);
     }
 
     .card h3{
@@ -207,10 +208,7 @@
     }
 
     .card .card-picture img {
-        width: 100%; 
-        height: 100%; 
-        object-fit: cover; 
-        border-radius: 50%; 
+        display: none;
     }
 }
 
