--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -3,12 +3,12 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-image: linear-gradient(to right, #6dc5d1, #3db2c2); 
+    background-color: #6dc5d1; 
     width: 100%; 
     height: 60px;
     display: flex;
     justify-content: center;
-    align-items: center;;
+    align-items: center;
     padding: 0 20px;
     box-shadow: -4px 0 5px rgba(0, 0, 0, 0.2); 
     transition: all 0.3s ease;
@@ -85,11 +85,11 @@
     }
 
     .navtext.open {
-        display: flex; /* Show the nav items when menu is open */
+        display: flex; 
     }
 
     .navtext ul {
-        flex-direction: column; /* Stack menu items vertically */
+        flex-direction: column; 
         margin: 0;
         padding: 0;
     }
